--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -27,8 +27,12 @@
   <body>
     <!-- dashboard nav bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <div class="container">
+        <img
+          src="../assest/sathsara motors.png"
+          alt="logo"
+          style="width: 80px"
+        />
         <button
           class="navbar-toggler"
           type="button"
@@ -40,19 +44,30 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#"
+                >Dashboard</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Generate Bill</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Full Repair</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link" href="#">Spair Parts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Expenditure</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Customers</a>
             </li>
           </ul>
         </div>
