finish to frontend

--- a/html/expenditure.html
+++ b/html/expenditure.html
@@ -21,6 +21,10 @@
     <!-- external css file -->
     <link rel="stylesheet" href="../css/generatebill.css" />
 
+
+    <!-- jQ -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <!-- title -->
     <title>Sathsara Motors GenerateBill</title>
   </head>
