--- a/html/sugnup.html
+++ b/html/sugnup.html
@@ -21,6 +21,9 @@
     <!-- external css file -->
     <link rel="stylesheet" href="../css/login.css" />
 
+    <!-- jQ -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <!-- title -->
     <title>Sathsara Motors signup</title>
   </head>
