--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- ==========================================     Nav Bar Page  ============================================= -->
-    <div id="dashboard-page">
+    <div>
       <!-- dashboard nav bar -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
@@ -86,6 +86,22 @@
           </div>
         </div>
       </nav>
+
+      <div id="dashboard-page" class="mt-5 bg-danger text-center">
+        <h1 class="mt-5">
+          Total Income <br />
+          <span class="text-primary mb-5" id="income"></span>
+        </h1>
+        <h1 class="mt-3">
+          Total Expenditure <br />
+          <span class="text-primary mb-5" id="expenditureAmount"></span>
+        </h1>
+
+        <h1 class="mt-3">
+          Total Profit <br />
+          <span class="text-primary mb-5" id="profit"></span>
+        </h1>
+      </div>
     </div>
 
     <!-- ==========================================   Generate Bill Page     ======================================== -->
@@ -191,7 +207,7 @@
                 >Final Amount :</label
               >
               <input
-                type="text"
+                type="number"
                 class="form-control d-block"
                 id="finalAmount"
                 aria-describedby="emailHelp"
@@ -283,7 +299,7 @@
                 >Amount :</label
               >
               <input
-                type="text"
+                type="number"
                 class="form-control d-block"
                 id="exAmount"
                 aria-describedby="emailHelp"
